RESOLVED FIXED236822
Client-set minimum effective device width is not respected if AllowViewportShrinkToFitContent is enabled
https://bugs.webkit.org/show_bug.cgi?id=236822
Summary Client-set minimum effective device width is not respected if AllowViewportSh...
Tim Horton
Reported 2022-02-17 18:58:29 PST
Client-set minimum effective device width is not respected if AllowViewportShrinkToFitContent is enabled
Attachments
Patch (13.71 KB, patch)
2022-02-17 19:12 PST, Tim Horton
no flags
Tim Horton
Comment 1 2022-02-17 19:12:28 PST
EWS
Comment 2 2022-02-18 12:23:15 PST
Committed r290151 (247490@main): <https://commits.webkit.org/247490@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452469 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-18 12:24:16 PST
Note You need to log in before you can comment on or make changes to this bug.